// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SHEETER $WIDTHS ## NATIVE ## 04 change width 01 use just width styles 1`] = `
<div>
  <div
    classnamex="[object Object]"
  >
    rendered: 1x
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 04 change width 01 use just width styles 2`] = `
<div>
  <div
    classnamex="[object Object]"
  >
    rendered: 2x
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 04 change width 01 use just width styles 3`] = `
<div>
  <div
    classnamex="[object Object]"
  >
    rendered: 3x
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 04 change width 02 use width flags and styles 1`] = `
<div>
  <div
    classnamex="[object Object]"
  >
    mobile (rendered: 1x)
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 04 change width 02 use width flags and styles 2`] = `
<div>
  <div
    classnamex="[object Object]"
  >
    tablet (rendered: 2x)
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## NATIVE ## 04 change width 02 use width flags and styles 3`] = `
<div>
  <div
    classnamex="[object Object]"
  >
    desktop (rendered: 3x)
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## WEB ## 04 change width 01 use just width styles 1`] = `
<div>
  <div
    classnamex="[object Object],[object Object],[object Object]"
  >
    rendered: 1x
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## WEB ## 04 change width 01 use just width styles 2`] = `
<div>
  <div
    classnamex="[object Object],[object Object],[object Object]"
  >
    rendered: 1x
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## WEB ## 04 change width 01 use just width styles 3`] = `
<div>
  <div
    classnamex="[object Object],[object Object],[object Object]"
  >
    rendered: 1x
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## WEB ## 04 change width 02 use width flags and styles 1`] = `
<div>
  <div
    classnamex="[object Object],[object Object],[object Object]"
  >
    mobile (rendered: 1x)
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## WEB ## 04 change width 02 use width flags and styles 2`] = `
<div>
  <div
    classnamex="[object Object],[object Object],[object Object]"
  >
    tablet (rendered: 2x)
  </div>
</div>
`;

exports[`SHEETER $WIDTHS ## WEB ## 04 change width 02 use width flags and styles 3`] = `
<div>
  <div
    classnamex="[object Object],[object Object],[object Object]"
  >
    desktop (rendered: 3x)
  </div>
</div>
`;
